<resources>
    <string name="app_name">Android Handbook</string>
    <string name="main_menu_studio">Android Studio</string>
    <string name="main_menu_android">Android</string>
    <string name="main_menu_kotlin">Kotlin</string>
    <string name="main_menu_storage">БД и Хранилище</string>
    <string name="main_menu_xml">XML</string>
    <string name="main_menu_design">Дизайн</string>
    <string name="main_menu_dictionaries">Библиотеки</string>
    <string name="main_menu_header">Справочник Android</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="main_menu_favorites">Избранное</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search_title">Поиск в справочнике</string>
    <string name="main_menu_roadmap">Roadmap</string>
    <string name="main_menu_interview">Собеседование</string>
    <string name="interview_sources_text">Материалы для этого экрана были позаимствованны с сайта https://androidschool.ru/2020/03/26/interview/ Спасибо автору!</string>
    <string name="my_digital_signature">create by ©Multiform</string>
</resources>